# myERP

./: .env.example  .gitignore  alembic.ini  database.py  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 0b6563b9f202_switch_to_timezone_aware_datetime.py  0c8565e49b39_init_account_management_schema.py  6fd39b4d038f_create_t_order.py  a1b2c3d4e5f6_rbac_module.py  b2c3d4e5f6a7_seed_rbac.py  cad8a3b29f3a_add_t_order_user_id_fk.py
api/: __init__.py  deps.py  rbac_deps.py
api/v1/: __init__.py  order.py  user.py
api/v1/rbac/: __init__.py  auth.py  (+1 more)
core/: config.py  database.py  error_code.py  exception.py  exception_handler.py  middleware.py  permission_cache.py  response.py  security.py
docs/: PRODUCTION_STATE_MACHINE.md  db-design-account-management.md  db-design-production.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: components.d.ts  env.d.ts  main.ts
issue/: rbac-module-code-review.md
model/: __init__.py  enums.py  order.py  part.py  rbac.py  user.py  worker.py
repository/: __init__.py  order.py  part.py  unit_of_work.py  user.py  worker.py
repository/rbac/: __init__.py  permission.py  role.py  role_permission.py  user_role.py
schema/: order.py  rbac.py  user.py
service/: order.py  user.py
service/rbac/: __init__.py  auth_service.py  rbac_service.py
tests/: conftest.py  test_unified_response.py
tests/repositories/: test_complex_queries.py  test_part_repository.py  test_worker_repository.py
utils/: id_gen.py  password.py  time.py
(+29 files in other folders)
